  program.  Reported by Marcin Kościelnicki.

The following bugs are resolved with this release:

  [23518] login: Remove utmp backend jump tables
  [24682] localedata: zh_CN first weekday should be Monday per GB/T
    7408-2005
  [24867] malloc: Remove unwanted leading whitespace in malloc_info
  [24879] login: Disarm timer after utmp lock acquisition
  [24880] login: Use struct flock64 in utmp
  [24986] alpha: new getegid, geteuid and getppid syscalls used
    unconditionally
  [24899] login: Add nonstring attributes to struct utmp, struct utmpx
  [24902] login: pututxline could fail to overwrite existing entries
  [25189] Don't use a custom wrapper macro around __has_include
  [25203] libio: Disable vtable validation for pre-2.1 interposed handles
  [25204] Ignore LD_PREFER_MAP_32BIT_EXEC for SUID programs
  [25225] ld.so fails to link on x86 if GCC defaults to -fcf-protection
  [25232] No const correctness for strchr et al. for Clang++


Version 2.30

Major new features:

* Unicode 12.1.0 Support: Character encoding, character type info, and
  transliteration tables are all updated to Unicode 12.1.0, using
  generator scripts contributed by Mike FABIAN (Red Hat).

* The dynamic linker accepts the --preload argument to preload shared
  objects, in addition to the LD_PRELOAD environment variable.

* The twalk_r function has been added.  It is similar to the existing
  twalk function, but it passes an additional caller-supplied argument
  to the callback function.

* On Linux, the getdents64, gettid, and tgkill functions have been added.

* Minguo (Republic of China) calendar support has been added as an
  alternative calendar for the following locales: zh_TW, cmn_TW, hak_TW,
  nan_TW, lzh_TW.

* The entry for the new Japanese era has been added for ja_JP locale.

* Memory allocation functions malloc, calloc, realloc, reallocarray, valloc,
  pvalloc, memalign, and posix_memalign fail now with total object size